--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -101,10 +101,9 @@ Most of Fonoster's use cases require an account, the Command-line interface, and
 
       You will be asked to enter the Application's name, speech information, and other details. Once you have entered this information, the Application will be created.
 
-     Your output should look like this:
+      Your output should look like this:
 
-     <img width="100%" src="/images/create-application.png" />
-
+      <img width="100%" src="/images/create-application.png" />
 
       To can list your existing applications with the following command:
 
@@ -153,7 +152,7 @@ Most of Fonoster's use cases require an account, the Command-line interface, and
       ```javascript
       const SDK = require("@fonoster/sdk");
 
-      # This is your Workspace Access Key ID
+      # Replace with your Workspace Access Key ID
       const client = SDK.Client({ accessKeyId: "00000000-0000-0000-0000-000000000000" });
 
       client.loginWithApiKey("AP0eerv2g7qow3e950k7twu4rvydcunq3k", "fNc...")
