--- a/concepts/workspaces.mdx
+++ b/concepts/workspaces.mdx
@@ -1,25 +1,30 @@
 ---
 title: 'Workspaces'
-description: 'Workspaces are a way to group related resources together.'
+description: 'Workspaces are a way to group related resources.'
 ---
 
-Workspaces in Fonoster allow you to organize and secure your resources. 
-
-All resources within a Workspace are accessible to all members of the Workspace. 
-
-Similarly, a set of API Keys created within a Workspace will have access to all resources in the Workspace according to the permissions granted to the API Key.
+Workspaces in Fonoster allow you to organize and secure your resources. All resources within a Workspace are accessible to all members of the Workspace. Similarly, a set of API Keys created within a Workspace will have access to all resources in the Workspace according to the permissions granted to the API Key.
 
 Once a Workspace is created, you can invite other users to join the Workspace and collaborate on resources.
 
 Within a Workspace, you will have the ability to create and manage the following resources:
 
-- Applications
-- Virtual Numbers
-- SIP Trunks
-- SIP Credentials
-- SIP Access Control Lists
-- SIP Domains and Agents
-- CDRs
-- API Keys
-- Secrets
-- Etc
+* Applications
+
+* Virtual Numbers
+
+* SIP Trunks
+
+* SIP Credentials
+
+* SIP Access Control Lists
+
+* SIP Domains and Agents
+
+* CDRs
+
+* API Keys
+
+* Secrets
+
+* Etc
