--- a/concepts/workspaces.mdx
+++ b/concepts/workspaces.mdx
@@ -7,6 +7,8 @@ Workspaces in Fonoster allow you to organize and secure your resources. All reso
 
 Once a Workspace is created, you can invite other users to join the Workspace and collaborate on resources.
 
+## Workspace resources
+
 Within a Workspace, you will have the ability to create and manage the following resources:
 
 * Applications
