Documentation edits made through Mintlify web editor

--- a/concepts/apikeys.mdx
+++ b/concepts/apikeys.mdx
@@ -7,7 +7,11 @@ API keys are used to authenticate requests to the API. API keys operate at the W
 
 All API keys have an Access Key ID and an Access Key Secret. The Access Key ID is used to identify the API key, and the Access Key Secret is used to authenticate the request. You should keep the Access Key Secret secure and never share it with anyone.
 
-You can differentiate API keys' Access Key ID from Workspace's Access Key ID by the prefix "AP" (Workspace's Access Key ID has the "WO" prefix, and User's Access Key ID has the "US" prefix).
+You can differentiate API keys' Access Key ID from Workspace's Access Key ID by the prefix "AP".
+
+<Tip>
+  Workspace's Access Key ID has the "WO" prefix, and User's Access Key ID has the "US" prefix
+</Tip>
 
 To create an API key with the SDK, first create a new Node.js project and install the SDK:
 
