Documentation edits made through Mintlify web editor

--- a/concepts/apikeys.mdx
+++ b/concepts/apikeys.mdx
@@ -10,7 +10,7 @@ All API keys have an Access Key ID and an Access Key Secret. The Access Key ID i
 You can differentiate API keys' Access Key ID from Workspace's Access Key ID by the prefix "AP".
 
 <Tip>
-  Workspace's Access Key ID has the "WO" prefix, and User's Access Key ID has the "US" prefix
+  Workspace's Access Key ID have the "WO" prefix, and User's Access Key ID has the "US" prefix
 </Tip>
 
 To create an API key with the SDK, first create a new Node.js project and install the SDK:
