--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -38,7 +38,9 @@ Most of Fonoster's use cases require an account, the Command-line interface, and
     node index.js
     ```
 
-    > Keep the application running for the next steps.
+    <Note>
+      Keep the application running for the next steps.
+    </Note>
   </Step>
 
   <Step title="Publish your application">
