Documentation edits made through Mintlify web editor

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -131,7 +131,9 @@ Most of Fonoster's use cases require an account, the Command-line interface, and
 
       You can now call the Twilio phone number to access your voice application.
 
-      > Twilio is used as an example. You can use other SIP providers as well.
+      <Tip>
+        Twilio is used as an example. You can use other SIP providers as well.
+      </Tip>
     </Accordion>
 
     <Accordion title="Make an outbound call">
