docs: update the tiles for all the placeholders

--- a/concepts/autopilot.mdx
+++ b/concepts/autopilot.mdx
@@ -1,4 +1,6 @@
 ---
 title: 'Autopilot'
-description: 'Description of your new file.'
+description: 'Voice applications powered by LLMs.'
 ---
+
+Coming soon.
