--- a/concepts/programmable-voice.mdx
+++ b/concepts/programmable-voice.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Programmable voice'
-description: 'Description of your new file.'
+description: 'Verb-based voice call control in Fonoster.'
 ---
 
 All about verbs, the voice server, speech providers, etc.
