--- a/concepts/sdks.mdx
+++ b/concepts/sdks.mdx
@@ -1,4 +1,6 @@
 ---
 title: 'SDKs'
-description: 'Description of your new file.'
+description: 'NodeJS and WebSDK for Fonoster.'
 ---
+
+Coming soon.
