--- a/concepts/sipnetwork.mdx
+++ b/concepts/sipnetwork.mdx
@@ -1,4 +1,6 @@
 ---
 title: 'SIP Network'
-description: 'Description of your new file.'
+description: 'SIP resources in Fonoster.'
 ---
+
+Coming soon.
