--- a/concepts/voice-streaming.mdx
+++ b/concepts/voice-streaming.mdx
@@ -1,4 +1,6 @@
 ---
 title: 'Voice streaming'
-description: 'Description of your new file.'
+description: 'Bidirectional voice streaming in Fonoster.'
 ---
+
+Coming soon.
