--- a/guides/prompting-guide.mdx
+++ b/guides/prompting-guide.mdx
@@ -1,4 +1,6 @@
 ---
 title: 'Prompting guide'
-description: 'Description of your new file.'
+description: 'Our recommended approach to LLM prompting.'
 ---
+
+Coming soon.
