--- a/self-hosting/deploy-with-docker.mdx
+++ b/self-hosting/deploy-with-docker.mdx
@@ -1,4 +1,6 @@
 ---
 title: 'Deploy with Docker'
-description: 'Description of your new file.'
+description: 'Using Docker and Docker Compose to deploy a self-hosted instance of Fonoster.'
 ---
+
+Coming soon.
