--- a/self-hosting/first-apikeys.mdx
+++ b/self-hosting/first-apikeys.mdx
@@ -1,4 +1,6 @@
 ---
 title: 'First API Keys'
-description: 'Description of your new file.'
+description: 'Initial setup of API keys for a self-hosted instance.'
 ---
+
+Coming soon.
