--- a/self-hosting/securing-the-api.mdx
+++ b/self-hosting/securing-the-api.mdx
@@ -1,4 +1,6 @@
 ---
 title: 'Securing the API'
-description: 'Description of your new file.'
+description: 'Adding TLS to the API.'
 ---
+
+Coming soon.
