--- a/guides/overwriting-speech-voices.mdx
+++ b/guides/overwriting-speech-voices.mdx
@@ -1,4 +1,6 @@
 ---
 title: 'Overwriting speech voices'
-description: 'Description of your new file.'
+description: 'Overwriting speech voices with the `Say` verb.'
 ---
+
+Coming soon.
