--- a/concepts/sdks.mdx
+++ b/concepts/sdks.mdx
@@ -3,4 +3,115 @@ title: 'SDKs'
 description: 'NodeJS and WebSDK for Fonoster.'
 ---
 
-Coming soon.
+Fonoster SDKs provide you with control of a set of Fonoster resources. We currently offer SDKs for the Node.js and browser environment, and we plan to add more in the future.
+
+## Installation
+
+```bash
+$ npm install --save @fonoster/sdk
+```
+
+Or using yarn:
+
+```bash
+$ yarn add @fonoster/sdk
+```
+
+Or in the browser:
+
+```html
+<script src="https://unpkg.com/@fonoster/sdk"></script>
+```
+
+### Importing the library
+
+For CommonJS projects:
+
+```typescript
+const SDK = require("@fonoster/sdk");
+```
+
+For ES6 modules:
+
+```typescript
+import * as SDK from "@fonoster/sdk";
+```
+
+Directly in the browser:
+
+```html
+<script src="https://unpkg.com/@fonoster/sdk"></script>
+<script>
+   // You can now use the SDK
+</script>
+```
+
+## Example
+
+Create a new SDK instance to interact with the Fonoster API. The SDK requires a client object to handle communication with the API.
+
+### Creating a client object
+
+In Node.js:
+
+```typescript
+const SDK = require("@fonoster/sdk");
+
+# Replace with your Workspace's Access Key Id
+const client = new SDK.Client({ accessKeyId: "WO00000000000000000000000000000000" });
+```
+
+When connecting to Fonoster's cloud services, you can omit the `endpoint` parameter.
+
+In the browser:
+
+```javascript
+const SDK = require("@fonoster/sdk");
+const client = new SDK.WebClient({ accessKeyId: "WO00000000000000000000000000000000" });
+```
+
+<Tip>
+ Note the only difference is the name of the constructor.
+</Tip>
+
+### Login in and make requests
+
+```javascript
+const username = "youruser@example.com";
+const password = "yourpassword";
+
+async function main() {
+  await client.login(username, password);
+  const applications = new SDK.Applications(client);
+  await applications.createApplication({
+    name: "MyApp",
+    type: "EXTERNAL",
+    endpoint: "localhost:50061" // Your app's endpoint
+ });
+}
+
+main().catch(console.error);
+```
+
+<Tip>
+In addition to the `login` method, the SDK provides a `loginWithApiKey` and `loginWithRefreshToken` methods. The `loginWithRefreshToken` is helpful in browser environments where you want to keep the user logged in between sessions.
+</Tip>
+
+<Tip>
+  The SDK will automatically refresh the token when it expires.
+</Tip>
+
+## APIs
+
+* [`Applications`](#Applications)
+* [`Acls`](#Acls)
+* [`Agents`](#Agents)
+* [`ApiKeys`](#ApiKeys)
+* [`Calls`](#Calls)
+* [`Credentials`](#Credentials)
+* [`Domains`](#Domains)
+* [`Numbers`](#Numbers)
+* [`Secrets`](#Secrets)
+* [`Trunks`](#Trunks)
+* [`Users`](#Users)
+* [`Workspaces`](#Workspaces)
