Documentation edits made through Mintlify web editor

--- a/concepts/sdks.mdx
+++ b/concepts/sdks.mdx
@@ -95,6 +95,6 @@ client.login("youruser@example.com", "yourpassword")
   The SDK will automatically refresh the token when it expires.
 </Tip>
 
-<Card title="See NPM for details" icon="npm" color="#FFFFFF" iconType="brands" href="https://www.npmjs.com/package/@fonoster/sdk">
-    For full documentation, please visit NPM.
+<Card title="See NPM for details" icon="npm" iconType="brands" href="https://www.npmjs.com/package/@fonoster/sdk">
+  For full documentation, please visit NPM.
 </Card>
