--- a/introduction.mdx
+++ b/introduction.mdx
@@ -46,7 +46,11 @@ With Fonoster, you can build any time of voice application, from simple IVRs to 
     The #get-help channel is a great place to get help with any questions about Fonoster.
   </Card>
 
-  <Card title="Follow us on X (Twitter)" icon="x-twitter" color="#FFFFFF" iconType="brands" href="https://twitter.com/fonoster">
+  <Card title="Follow us on X (Twitter)" icon="x-twitter" color="#000000" iconType="brands" className="block dark:hidden" href="https://twitter.com/fonoster">
+    Follow us on X (Twitter) for the latest updates and news.
+  </Card>
+
+  <Card title="Follow us on X (Twitter)" icon="x-twitter" color="#FFFFFF" iconType="brands" className="hidden dark:block" href="https://twitter.com/fonoster">
     Follow us on X (Twitter) for the latest updates and news.
   </Card>
 
