Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -54,6 +54,16 @@ With Fonoster, you can build any time of voice application, from simple IVRs to 
     Follow us on X (Twitter) for the latest updates and news.
   </Card>
 
+  <Card title="Follow us on X (Twitter)" icon="x-twitter" color="#FFFFFF" iconType="solid" href="https://twitter.com/fonoster">
+    Follow us on X (Twitter) for the latest updates and news.
+  </Card>
+
+  <Card title="Follow us on X (Twitter)" icon="x-twitter" color="#FFFFFF" iconType="light" href="https://twitter.com/fonoster">
+    Follow us on X (Twitter) for the latest updates and news.
+  </Card>
+
+
+
   <Card title="Schedule a call" icon="phone" iconType="solid" href="https://cal.com/psanders/coffee-chat">
     Arrange a call with the team. We can help answer questions and give 1-on-1 help building on Fonoster.
   </Card>
