--- a/introduction.mdx
+++ b/introduction.mdx
@@ -42,27 +42,13 @@ With Fonoster, you can build any time of voice application, from simple IVRs to 
 ## Getting help
 
 <CardGroup cols={2}>
-  <Card title="Join our Discord server" icon="discord" color="#5765F2" iconType="brands" href="https://discord.com/invite/4QWgSz4hTC">
+  <Card title="Join our Discord server" icon="discord" color="#5765F2" href="https://discord.com/invite/4QWgSz4hTC">
     The #get-help channel is a great place to get help with any questions about Fonoster.
   </Card>
 
-  <Card title="Follow us on X (Twitter)" icon="x-twitter" color="#000000" iconType="brands" className="hidden dark:hidden" href="https://twitter.com/fonoster">
+  <Card title="Follow us on X (Twitter)" icon="x-twitter" href="https://twitter.com/fonoster">
     Follow us on X (Twitter) for the latest updates and news.
   </Card>
-
-  <Card title="Follow us on X (Twitter)" icon="x-twitter" color="#FFFFFF" iconType="brands" className="hidden dark:block" href="https://twitter.com/fonoster">
-    Follow us on X (Twitter) for the latest updates and news.
-  </Card>
-
-  <Card title="Follow us on X (Twitter)" icon="x-twitter" color="#FFFFFF" iconType="solid" href="https://twitter.com/fonoster">
-    Follow us on X (Twitter) for the latest updates and news.
-  </Card>
-
-  <Card title="Follow us on X (Twitter)" icon="x-twitter" color="#FFFFFF" iconType="light" href="https://twitter.com/fonoster">
-    Follow us on X (Twitter) for the latest updates and news.
-  </Card>
-
-
 
   <Card title="Schedule a call" icon="phone" iconType="solid" href="https://cal.com/psanders/coffee-chat">
     Arrange a call with the team. We can help answer questions and give 1-on-1 help building on Fonoster.
