Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -41,6 +41,10 @@ With Fonoster, you can build any time of voice application, from simple IVRs to 
 
 ## Getting help
 
+<img className="block h-32 dark:hidden" src="/logo/light.jpg" />
+<img className="hidden h-32 dark:block" src="/logo/dark" />
+
+
 <CardGroup cols={2}>
   <Card title="Join our Discord server" icon="discord" color="#5765F2" href="https://discord.com/invite/4QWgSz4hTC">
     The #get-help channel is a great place to get help with any questions about Fonoster.
@@ -50,7 +54,7 @@ With Fonoster, you can build any time of voice application, from simple IVRs to 
     Follow us on X (Twitter) for the latest updates and news.
   </Card>
 
-    <Card title="Follow us on X (Twitter)" icon="x-twitter" color="#FFFFFF" href="https://twitter.com/fonoster">
+  <Card title="Follow us on X (Twitter)" icon="x-twitter" color="#FFFFFF" href="https://twitter.com/fonoster" class="hidden">
     Follow us on X (Twitter) for the latest updates and news.
   </Card>
 
