Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -41,9 +41,12 @@ With Fonoster, you can build any time of voice application, from simple IVRs to 
 
 ## Getting help
 
-<img classname="block h-32 dark:hidden" src="/logo/light.svg" />
+<!-- Light Mode Image -->
+<img src="/logo/light.svg" class="hidden dark:hidden" />
 
-<img classname="hidden h-32 dark:block" src="/logo/dark.svg" />
+<!-- Dark Mode Image -->
+<img src="/logo/dark.svg" class="hidden dark:block" />
+
 
 <CardGroup cols={2}>
   <Card title="Join our Discord server" icon="discord" color="#5765F2" href="https://discord.com/invite/4QWgSz4hTC">
