Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -41,9 +41,9 @@ With Fonoster, you can build any time of voice application, from simple IVRs to 
 
 ## Getting help
 
-<img src="/logo/light.svg" class="hidden dark:hidden" />
+<img className="hidden dark:hidden" src="/logo/light.svg" />
 
-<img src="/logo/dark.svg" class="hidden dark:block" />
+<img className="hidden dark:block" src="/logo/dark.svg" />
 
 <CardGroup cols={2}>
   <Card title="Join our Discord server" icon="discord" color="#5765F2" href="https://discord.com/invite/4QWgSz4hTC">
