--- a/introduction.mdx
+++ b/introduction.mdx
@@ -41,20 +41,16 @@ With Fonoster, you can build any time of voice application, from simple IVRs to 
 
 ## Getting help
 
-<img class="block dark:hidden" src="/logo/light.svg" />
-
-<img class="hidden dark:block" src="/logo/dark.svg" />
-
 <CardGroup cols={2}>
   <Card title="Join our Discord server" icon="discord" color="#5765F2" href="https://discord.com/invite/4QWgSz4hTC">
     The #get-help channel is a great place to get help with any questions about Fonoster.
   </Card>
 
-  <Card title="Follow us on X (Twitter)" icon="x-twitter" color="#000000" href="https://twitter.com/fonoster">
+  <Card title="Follow us on X (Twitter)" icon="x-twitter" color="#000000" href="https://twitter.com/fonoster" class="block dark:hidden">
     Follow us on X (Twitter) for the latest updates and news.
   </Card>
 
-  <Card title="Follow us on X (Twitter)" icon="x-twitter" color="#FFFFFF" href="https://twitter.com/fonoster" class="hidden">
+  <Card title="Follow us on X (Twitter)" icon="x-twitter" color="#FFFFFF" href="https://twitter.com/fonoster" class="hidden" class="hidden dark:block">
     Follow us on X (Twitter) for the latest updates and news.
   </Card>
 
