--- a/introduction.mdx
+++ b/introduction.mdx
@@ -50,7 +50,7 @@ With Fonoster, you can build any time of voice application, from simple IVRs to 
     Follow us on X (Twitter) for the latest updates and news.
   </Card>
 
-  <Card title="Follow us on X (Twitter)" icon="x-twitter" color="#FFFFFF" href="https://twitter.com/fonoster" class="hidden" class="hidden dark:block">
+  <Card title="Follow us on X (Twitter)" icon="x-twitter" color="#FFFFFF" href="https://twitter.com/fonoster" class="hidden dark:block">
     Follow us on X (Twitter) for the latest updates and news.
   </Card>
 
