--- a/introduction.mdx
+++ b/introduction.mdx
@@ -46,11 +46,7 @@ With Fonoster, you can build any time of voice application, from simple IVRs to 
     The #get-help channel is a great place to get help with any questions about Fonoster.
   </Card>
 
-  <Card title="Follow us on X (Twitter)" icon="x-twitter" color="#000000" href="https://twitter.com/fonoster" class="block dark:hidden">
-    Follow us on X (Twitter) for the latest updates and news.
-  </Card>
-
-  <Card title="Follow us on X (Twitter)" icon="x-twitter" color="#FFFFFF" href="https://twitter.com/fonoster" class="hidden dark:block">
+  <Card title="Follow us on X (Twitter)" icon="x-twitter" color="#FFFFFF" href="https://twitter.com/fonoster">
     Follow us on X (Twitter) for the latest updates and news.
   </Card>
 
