Documentation edits made through Mintlify web editor

--- a/self-hosting/deploy-with-docker.mdx
+++ b/self-hosting/deploy-with-docker.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Deploy with Docker'
-description: 'Using Docker and Docker Compose to deploy a self-hosted instance of Fonoster.'
+description: 'Self-hosting with Docker and Docker Compose.'
 ---
 
 Docker is the easiest way to deploy a self-hosted instance of Fonoster. This guide will walk you through deploying the Fonoster services using Docker and Docker Compose.
@@ -74,9 +74,10 @@ After a few moments, you can interact with Fonoster using the API or SDK.
 
 <CardGroup cols={2}>
   <Card title="SDK" icon="npm" color="#C53635" href="https://www.npmjs.com/package/@fonoster/sdk">
-  SDK documentation at NPM.
+    SDK documentation at NPM.
   </Card>
-  <Card title="Command-Line" icon="npm" color="#C53635"href="https://www.npmjs.com/package/@fonoster/ctl">
-  Command-line documentation at NPM.
+
+  <Card title="Command-Line" icon="npm" color="#C53635" href="https://www.npmjs.com/package/@fonoster/ctl">
+    Command-line documentation at NPM.
   </Card>
 </CardGroup>
