Documentation edits made through Mintlify web editor

--- a/self-hosting/deploy-with-docker.mdx
+++ b/self-hosting/deploy-with-docker.mdx
@@ -35,6 +35,7 @@ Then, open the `.env` file with your favorite editor and update the following va
 * `ASTERISK_SIPPROXY_HOST`: Set this variable to the IP address of the host machine.
 
 In addition to the previous variables, you should update all the secrets and ensure the `.env` file is safely stored.
+</Step>
 
 <Step title="Generate keys">
 Next, generate a set of public and private keys for the server. You can use the following command to generate the keys:
