--- a/self-hosting/deploy-with-docker.mdx
+++ b/self-hosting/deploy-with-docker.mdx
@@ -11,72 +11,82 @@ The only prerequisite for Fonoster is to have [Docker](https://docs.docker.com/g
 
 <Steps>
   <Step title="Prepare the environment">
+    Follow the next few steps to prepare the environment:
 
-First, you'll need to create a new directory in your preferred location and change it. The root directory we will use in the guide is `fonoster.`
+    <AccordionGroup>
+    <Accordion title="Create a new directory">
+    Create a new directory in your preferred location and change it. The root directory we will use in the guide is `fonoster.`
 
-```bash
-mkdir -p fonoster/config
-cd fonoster
-```
+    ```bash
+    mkdir -p fonoster/config
+    cd fonoster
+    ```
+    </Accordion>
 
-Then, copy the `.env.example` from the repository to the current directory and rename it to `.env.` This file contains all the environment variables that the services need to run. You can use the following command to copy the file:
+    <Accordion title="Download example environment">
+    Copy the `.env.example` from the repository to the current directory and rename it to `.env.` This file contains all the environment variables that the services need to run. You can use the following command to copy the file:
 
-```bash
-curl -o .env https://raw.githubusercontent.com/fonoster/fonoster/master/.env.example
-curl -o ./compose.yaml https://raw.githubusercontent.com/fonoster/fonoster/master/compose.yaml
-curl -o ./config/integrations.json https://raw.githubusercontent.com/fonoster/fonoster/master/config/integrations.example.json
-curl -o ./config/envoy.yaml https://raw.githubusercontent.com/fonoster/fonoster/master/config/envoy.yaml
-```
+    ```bash
+    curl -o .env https://raw.githubusercontent.com/fonoster/fonoster/master/.env.example
+    curl -o ./compose.yaml https://raw.githubusercontent.com/fonoster/fonoster/master/compose.yaml
+    curl -o ./config/integrations.json https://raw.githubusercontent.com/fonoster/fonoster/master/config/integrations.example.json
+    curl -o ./config/envoy.yaml https://raw.githubusercontent.com/fonoster/fonoster/master/config/envoy.yaml
+    ```
+    </Accordion>
 
-Then, open the `.env` file with your favorite editor and update the following variables:
+    <Accordion title="Update environment variables">
+    Then, open the `.env` file with your favorite editor and update the following variables:
 
-* `DOCKER_HOST_ADDRESS`: The public IP address of your Docker host. If running locally, you can use your local IP address. If you are running the application on a server, you must use a routable IP address for the server.
+    * `DOCKER_HOST_ADDRESS`: The public IP address of your Docker host. If running locally, you can use your local IP address. If you are running the application on a server, you must use a routable IP address for the server.
 
-* `ASTERISK_SIPPROXY_HOST`: Set this variable to the IP address of the host machine.
+    * `ASTERISK_SIPPROXY_HOST`: Set this variable to the IP address of the host machine.
 
-In addition to the previous variables, you should update all the secrets and ensure the `.env` file is safely stored.
-</Step>
+<Warning>
+    In addition to the previous variables, you should update all the secrets and ensure the `.env` file is safely stored.
+</Warning>
+    </Accordion>
+  </Step>
 
-<Step title="Generate keys">
-Next, generate a set of public and private keys for the server. You can use the following command to generate the keys:
+  <Step title="Generate keys">
+    Next, generate a set of public and private keys for the server. You can use the following command to generate the keys:
 
-```bash
-mkdir -p config/keys
-openssl genpkey -algorithm rsa -out config/keys/private.pem -pkeyopt rsa_keygen_bits:2048
-openssl rsa -pubout -in config/keys/private.pem -out config/keys/public.pem
-chmod 644 config/keys/*
-```
+    ```bash
+    mkdir -p config/keys
+    openssl genpkey -algorithm rsa -out config/keys/private.pem -pkeyopt rsa_keygen_bits:2048
+    openssl rsa -pubout -in config/keys/private.pem -out config/keys/public.pem
+    chmod 644 config/keys/*
+    ```
 
-Your directory structure should look like this:
+    Your directory structure should look like this:
 
-```bash
-.
-├── .env
-├── compose.yaml
-└── config
-    ├── envoy.yaml
-    ├── integrations.json
-    └── keys
-        ├── private.pem
-        └── public.pem
+    ```bash
+    .
+    ├── .env
+    ├── compose.yaml
+    └── config
+        ├── envoy.yaml
+        ├── integrations.json
+        └── keys
+            ├── private.pem
+            └── public.pem
 
-3 directories, 6 files
-```
+    3 directories, 6 files
+    ```
 
-<Note>
-  The [integrations.json](https://github.com/fonoster/fonoster/blob/main/config/integrations.example.json) file contains the credentials for the integrations (stt, tts, etc). You must update this file with the correct credentials for the integrations you want to use.
-</Note>
-</Step>
+    <Note>
+      The [integrations.json](https://github.com/fonoster/fonoster/blob/main/config/integrations.example.json) file contains the credentials for the integrations (stt, tts, etc). You must update this file with the correct credentials for the integrations you want to use.
+    </Note>
+  </Step>
 
-<Step title="Start the server">
-Finally, run the following command to start the application:
+  <Step title="Start the server">
+    Finally, run the following command to start the application:
 
-```bash
-docker compose up -d
-```
+    ```bash
+    docker compose up -d
+    ```
 
-After a few moments, you can interact with Fonoster using the API or SDK.
-</Step>
+    After a few moments, you can interact with Fonoster using the API or SDK.
+  </Step>
 </Steps>
 
 <CardGroup cols={2}>
