Documentation edits made through Mintlify web editor

--- a/self-hosting/deploy-with-docker.mdx
+++ b/self-hosting/deploy-with-docker.mdx
@@ -45,6 +45,7 @@ The only prerequisite for Fonoster is to have [Docker](https://docs.docker.com/g
     In addition to the previous variables, you should update all the secrets and ensure the `.env` file is safely stored.
 </Warning>
     </Accordion>
+    </AccordionGroup>
   </Step>
 
   <Step title="Generate keys">
