--- a/self-hosting/deploy-with-docker.mdx
+++ b/self-hosting/deploy-with-docker.mdx
@@ -14,37 +14,39 @@ The only prerequisite for Fonoster is to have [Docker](https://docs.docker.com/g
     Follow the next few steps to prepare the environment:
 
     <AccordionGroup>
-    <Accordion title="Create a new directory">
-    Create a new directory in your preferred location and change it. The root directory we will use in the guide is `fonoster.`
+      <Accordion title="Create a new directory">
+        Create a new directory in your preferred location and change it. The root directory we will use in the guide is `fonoster.`
 
-    ```bash
-    mkdir -p fonoster/config
-    cd fonoster
-    ```
-    </Accordion>
+        ```bash
+        mkdir -p fonoster/config
+        cd fonoster
+        ```
+      </Accordion>
 
-    <Accordion title="Download example environment">
-    Copy the `.env.example` from the repository to the current directory and rename it to `.env.` This file contains all the environment variables that the services need to run. You can use the following command to copy the file:
+      <Accordion title="Download example environment">
+        Copy the `.env.example` from the repository to the current directory and rename it to `.env.` This file contains all the environment variables that the services need to run. 
+        
+        You can use the following commands to copy all the necessary files:
 
-    ```bash
-    curl -o .env https://raw.githubusercontent.com/fonoster/fonoster/master/.env.example
-    curl -o ./compose.yaml https://raw.githubusercontent.com/fonoster/fonoster/master/compose.yaml
-    curl -o ./config/integrations.json https://raw.githubusercontent.com/fonoster/fonoster/master/config/integrations.example.json
-    curl -o ./config/envoy.yaml https://raw.githubusercontent.com/fonoster/fonoster/master/config/envoy.yaml
-    ```
-    </Accordion>
+        ```bash
+        curl -o .env https://raw.githubusercontent.com/fonoster/fonoster/master/.env.example
+        curl -o ./compose.yaml https://raw.githubusercontent.com/fonoster/fonoster/master/compose.yaml
+        curl -o ./config/integrations.json https://raw.githubusercontent.com/fonoster/fonoster/master/config/integrations.example.json
+        curl -o ./config/envoy.yaml https://raw.githubusercontent.com/fonoster/fonoster/master/config/envoy.yaml
+        ```
+      </Accordion>
 
-    <Accordion title="Update environment variables">
-    Then, open the `.env` file with your favorite editor and update the following variables:
+      <Accordion title="Update environment variables">
+        Then, open the `.env` file with your favorite editor and update the following variables:
 
-    * `DOCKER_HOST_ADDRESS`: The public IP address of your Docker host. If running locally, you can use your local IP address. If you are running the application on a server, you must use a routable IP address for the server.
+        * `DOCKER_HOST_ADDRESS`: The public IP address of your Docker host. If running locally, you can use your local IP address. If you are running the application on a server, you must use a routable IP address for the server.
 
-    * `ASTERISK_SIPPROXY_HOST`: Set this variable to the IP address of the host machine.
+        * `ASTERISK_SIPPROXY_HOST`: Set this variable to the IP address of the host machine.
 
-<Warning>
-    In addition to the previous variables, you should update all the secrets and ensure the `.env` file is safely stored.
-</Warning>
-    </Accordion>
+        <Warning>
+          In addition to the previous variables, you should update all the secrets and ensure the `.env` file is safely stored.
+        </Warning>
+      </Accordion>
     </AccordionGroup>
   </Step>
 
@@ -91,11 +93,11 @@ The only prerequisite for Fonoster is to have [Docker](https://docs.docker.com/g
 </Steps>
 
 <CardGroup cols={2}>
-  <Card title="SDK" icon="npm" color="#C53635" href="https://www.npmjs.com/package/@fonoster/sdk">
+  <Card title="SDK" icon="code" color="#C53635" href="https://www.npmjs.com/package/@fonoster/sdk">
     SDK documentation at NPM.
   </Card>
 
-  <Card title="Command-Line" icon="npm" color="#C53635" href="https://www.npmjs.com/package/@fonoster/ctl">
+  <Card title="Command-Line" icon="square-terminal" color="#C53635" href="https://www.npmjs.com/package/@fonoster/ctl">
     Command-line documentation at NPM.
   </Card>
 </CardGroup>
