Documentation edits made through Mintlify web editor

--- a/self-hosting/deploy-with-docker.mdx
+++ b/self-hosting/deploy-with-docker.mdx
@@ -24,8 +24,8 @@ The only prerequisite for Fonoster is to have [Docker](https://docs.docker.com/g
       </Accordion>
 
       <Accordion title="Download example environment">
-        Copy the `.env.example` from the repository to the current directory and rename it to `.env.` This file contains all the environment variables that the services need to run. 
-        
+        Copy the `.env.example` from the repository to the current directory and rename it to `.env.` This file contains all the environment variables that the services need to run.
+
         You can use the following commands to copy all the necessary files:
 
         ```bash
@@ -93,11 +93,11 @@ The only prerequisite for Fonoster is to have [Docker](https://docs.docker.com/g
 </Steps>
 
 <CardGroup cols={2}>
-  <Card title="SDK" icon="code" color="#C53635" href="https://www.npmjs.com/package/@fonoster/sdk">
+  <Card title="SDK" icon="code" href="https://www.npmjs.com/package/@fonoster/sdk">
     SDK documentation at NPM.
   </Card>
 
-  <Card title="Command-Line" icon="square-terminal" color="#C53635" href="https://www.npmjs.com/package/@fonoster/ctl">
+  <Card title="Command-Line" icon="square-terminal" href="https://www.npmjs.com/package/@fonoster/ctl">
     Command-line documentation at NPM.
   </Card>
 </CardGroup>
