--- a/self-hosting/deploy-with-docker.mdx
+++ b/self-hosting/deploy-with-docker.mdx
@@ -9,6 +9,8 @@ Docker is the easiest way to deploy a self-hosted instance of Fonoster. This gui
 
 The only prerequisite for Fonoster is to have [Docker](https://docs.docker.com/get-docker/) installed on the host machine.
 
+## Installation by the numbers
+
 <Steps>
   <Step title="Prepare the environment">
     Follow the next few steps to prepare the environment:
