Documentation edits made through Mintlify web editor

--- a/self-hosting/deploy-with-docker.mdx
+++ b/self-hosting/deploy-with-docker.mdx
@@ -9,7 +9,7 @@ Docker is the easiest way to deploy a self-hosted instance of Fonoster. This gui
 
 The only prerequisite for Fonoster is to have [Docker](https://docs.docker.com/get-docker/) installed on the host machine.
 
-## Installation by the numbers
+## Step-by-step installation
 
 <Steps>
   <Step title="Prepare the environment">
