Documentation edits made through Mintlify web editor

--- a/self-hosting/first-apikeys.mdx
+++ b/self-hosting/first-apikeys.mdx
@@ -58,7 +58,9 @@ You must create API keys to log in to a Workspace and perform operations.
       });
     });
     ```
+  </Step>
 
+  <Step title="Run the script">
     Finally, run the script.
 
     ```bash
